[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/UI/IsiSetting.png" type="Texture" id=1]
[ext_resource path="res://Assets/UI/TombolOn Unpressed.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/TombolOn Pressed.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI/TombolOff Pressed.png" type="Texture" id=4]
[ext_resource path="res://Assets/UI/TombolOff Unpressed.png" type="Texture" id=5]
[ext_resource path="res://Script/Setting.gd" type="Script" id=6]
[ext_resource path="res://Assets/UI/CloseBtn.png" type="Texture" id=7]
[ext_resource path="res://Assets/SFX/ClickButton.mp3" type="AudioStream" id=8]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.729412 )

[node name="Setting" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="DarkOverlay" type="Panel" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
custom_styles/panel = SubResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 425.0
margin_top = 190.0
margin_right = 1499.0
margin_bottom = 957.0
texture = ExtResource( 1 )
expand = true

[node name="TombolBGMOn" type="TextureButton" parent="."]
margin_left = 966.0
margin_top = 418.0
margin_right = 1147.0
margin_bottom = 515.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_disabled = ExtResource( 3 )
expand = true

[node name="TombolBGMOff" type="TextureButton" parent="."]
margin_left = 1168.0
margin_top = 418.0
margin_right = 1349.0
margin_bottom = 515.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
texture_disabled = ExtResource( 4 )
expand = true

[node name="TombolSFXOn" type="TextureButton" parent="."]
margin_left = 966.0
margin_top = 589.0
margin_right = 1147.0
margin_bottom = 686.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_disabled = ExtResource( 3 )
expand = true

[node name="TombolSFXOff" type="TextureButton" parent="."]
margin_left = 1168.0
margin_top = 589.0
margin_right = 1349.0
margin_bottom = 686.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
texture_disabled = ExtResource( 4 )
expand = true

[node name="TombolSkipOn" type="TextureButton" parent="."]
margin_left = 966.0
margin_top = 749.0
margin_right = 1147.0
margin_bottom = 846.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_disabled = ExtResource( 3 )
expand = true

[node name="TombolSkipOff" type="TextureButton" parent="."]
margin_left = 1168.0
margin_top = 749.0
margin_right = 1349.0
margin_bottom = 846.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
texture_disabled = ExtResource( 4 )
expand = true

[node name="CloseButton" type="Button" parent="."]
margin_left = 385.0
margin_top = 183.0
margin_right = 525.0
margin_bottom = 308.0
flat = true
expand_icon = true

[node name="TextureRect" type="TextureRect" parent="CloseButton"]
margin_right = 140.0
margin_bottom = 125.0
texture = ExtResource( 7 )
expand = true

[node name="SFXClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
bus = "SFX"
